# Clipboard_rust

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
.sqlx/: query-3f3c9f741228e3d6ecdd7c42ce54f7344e906ace076d432bdef1cc3d611b8b19.json  query-4b7699e69b9819639e60982900c6d7a21589d4f8eca71353b216285e61b14a81.json  query-6848a6f524274f46fbda26d3eeaef948bf5abe3af0e818a6dcf0cbfcf8c759a8.json  query-687199978d0d4bbd26cf4172e8c55c0512c4ba37edfead535fa9186ebd97e288.json  query-79a0c6e97cf9a0f3a09212d59a040300a7dd5d3e4176a82067b38cd024f68cb7.json  query-7bb93bfd403fa55e121e9c13ee5019c4fd8d3d667eeda66867693fc0db9c5400.json  query-7be54083f5f2bba2b405110006ea0a58529bd4bc01a79f86a782a0b082233fd6.json  query-929a0d3df715813e745d9313efdd7694536738de24101322d2e2833dc455e5e0.json  query-e5a61ed3186198dc9628eddd9e3daaa956aa065a57bbc9fc1c14bdfff6962769.json
migrations/: 20250725042613_create_tables.sql
src/: main.rs
src/models/: filemeta.rs  message.rs  mod.rs  taglist.rs
src/routes/: file.rs  message.rs  mod.rs  taglist.rs
