[package]
name = "clipboard-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tokio-util = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "macros"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"