[package]
name = "clipboard-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio-util = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.4"
chrono = { version = "0.4", features = ["serde"] }
http = "0.2"
